Fix overflow issue

--- a/wp-content/themes/paylidify/sass/layout/_content-sidebar.scss
+++ b/wp-content/themes/paylidify/sass/layout/_content-sidebar.scss
@@ -1,3 +1,7 @@
+#page-wrap {
+	overflow: hidden;
+}
+
 #page {
 	width: $size__site-full;
 	max-width: $size__site-max-width;
