--- a/wp-content/themes/paylidify/style.css
+++ b/wp-content/themes/paylidify/style.css
@@ -1065,6 +1065,9 @@ a {
 /*--------------------------------------------------------------
 # Content
 --------------------------------------------------------------*/
+#page-wrap {
+  overflow: hidden; }
+
 #page {
   width: 90%;
   max-width: 1140px;
